# prost

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  EDITIONS.md  FUZZING.md  KANI.md  README.md  TODO  default.nix  deny.toml  failing_tests.txt  flake.nix  prepare-release.sh  protobuf-notes.md  publish-release.sh  rust-toolchain.toml  rust.proto  taplo.toml  test_messages_proto3.proto
b_tests/: .gitignore  Cargo.toml  build.rs
b_tests/src/: lib.rs
b_tests/src/b_generated/: mod.rs
b_tests/src/protos/: order.proto
benchmarks/: Cargo.toml  build.rs
benchmarks/benches/: dataset.rs
benchmarks/src/: lib.rs  messages.proto  varint.rs
conformance/: Cargo.toml  build.rs  failing_tests.txt  succeeding_tests.txt
conformance/src/: main.rs
conformance/tests/: conformance.rs
fuzz/: Cargo.toml
fuzz/afl/: .gitignore
fuzz/afl/proto3/: Cargo.toml  README.md
fuzz/afl/proto3/in/: testmessage
fuzz/afl/proto3/src/: main.rs  reproduce.rs
fuzz/fuzzers/: parse_date.rs  parse_duration.rs  proto2.rs  proto3.rs
prosit-test/: Cargo.toml  build.rs
prosit-test/proto/: prosit.proto
prosit-test/src/: main.rs
prost/: Cargo.toml  README.md
prost-build/: Cargo.toml  README.md  build.rs
prost-build/src/: ast.rs  code_generator.rs  collections.rs  config.rs  context.rs  enums.rs  extern_paths.rs  file_descriptor_set.rs  filters.rs  fully_qualified_name.rs  ident.rs  json.rs  lib.rs  libprotoc.cpp  message_graph.rs  module.rs  path.rs  smoke_test.proto  smoke_test_expected.txt  syn_helpers.rs  test_enum.proto
prost-build/src/code_generator/: c_escaping.rs  enums.rs  features.rs  locations.rs  messages.rs  mod.rs  services.rs  syntax.rs
prost-build/src/code_generator/messages/: oneof.rs
prost-build/src/fixtures/alphabet/: _expected_include.rs  a.proto  b.proto  c.proto  d.proto  e.proto  f.proto
prost-build/src/fixtures/custom_string/: _expected_custom_string_btree_map.rs  _expected_custom_string_btree_map_formatted.rs  _expected_custom_string_formatted.rs  _expected_custom_string_selective.rs  _expected_custom_string_selective_formatted.rs  custom_string.proto
prost-build/src/fixtures/deprecated/: _all_deprecated.rs  _all_deprecated_ignore_deprecated.rs  all_deprecated.proto  (+2 more)
prost-build/tests/single_include/: Cargo.toml
prost-codegen/: Cargo.toml  README.md
prost-codegen/src/: code_generator.rs  ident.rs  lib.rs  message_graph.rs
prost-derive/: Cargo.toml  README.md
prost-derive/src/: infer_tags.rs  lib.rs  meta.rs  options.rs  prost-derive.rs
prost-derive/src/field/: enum_typed.rs  extension_set.rs  group.rs  map.rs  message.rs  mod.rs  msg_fns.rs  oneof.rs  scalar.rs  skip.rs  unknown.rs  unknown_field_set.rs  unknown_fields.rs
prost-derive/src/serde/: de.rs  mod.rs  ser.rs  utils.rs
prost-examples/: Cargo.toml  build.rs  hello.proto
prost-examples/src/: lib.rs
prost-googleapis/: Cargo.toml
prost-googleapis/src/: lib.rs
prost-googleapis/src/google/: mod.rs
prost-serde/: Cargo.toml
prost-serde/src/: de.rs  error.rs  lib.rs  ser.rs
prost-types/: Cargo.toml  README.md
prost-types/src/: any.rs  any_v2.rs  compiler.rs  conversions.rs  datetime.rs  duration.rs  lib.rs  protobuf.rs  serde.rs  smallbox.rs  timestamp.rs  type_url.rs
prost-types/tests/: bootstrap.rs
prost/benches/: varint.rs
prost/src/: builder.rs  encoding.rs  error.rs  facade.rs  lib.rs  message.rs  name.rs  open_enum.rs  types.rs  unknown.rs
prost/src/encoding/: length_delimiter.rs  varint.rs  wire_type.rs
prost/src/serde/: de.rs  mod.rs  private.rs  ser.rs  types.rs
proto-conformance/: Cargo.toml  build.rs
proto-conformance/src/: conformance.rs  main.rs  mod.rs  protobuf_unittest.rs  protobuf_unittest_import.rs
protobuf/: Cargo.toml  README.md  build.rs
protobuf/benches/: dataset.rs
protobuf/src/: fix-conformance_test_runner-cmake-build.patch  lib.rs
protoc-bin/: Cargo.toml
protoc-bin/src/: lib.rs
protoc-gen-prost/: Cargo.toml
protoc-gen-prost/src/: main.rs
test-all-types/: Cargo.toml  build.rs
test-all-types/src/: lib.rs
tests/: Cargo.toml  build.rs  expanded.rs  foo.rs  message_encoding.rs  packages-test.rs  simple.rs
tests-2015/: Cargo.toml
tests-2018/: Cargo.toml
tests-2024/: Cargo.toml
tests-alloc/: Cargo.toml
tests-alloc/src/: bin.rs  build.rs
tests-infra/: Cargo.toml
tests-infra/src/: lib.rs
tests-no-std/: Cargo.toml
tests/field-wrappers/: Cargo.toml  build.rs
tests/field-wrappers/protos/: wrappers.proto
tests/field-wrappers/src/: lib.rs  wrappers_arc.rs  wrappers_box.rs
tests/overflow/: Cargo.toml  build.rs
tests/overflow/src/: encoded_len.proto  encoded_len.rs  lib.rs
tests/prost-path/: Cargo.toml  build.rs
tests/prost-path/protos/: prost_path.proto
tests/prost-path/src/: lib.rs
tests/reexported-prost/: Cargo.toml
tests/reexported-prost/src/: lib.rs
tests/single-include/: Cargo.toml  build.rs
tests/single-include/protos/: outdir.proto  search.proto
tests/single-include/src/: lib.rs  main.rs
tests/src/: bootstrap.rs  boxed_field.proto  boxed_field.rs  build.rs  builders.proto  builders.rs  bytes.rs  bytes_types.proto  bytes_types.rs  cowed_field.proto  cowed_field.rs  custom_attributes.proto  custom_attributes.rs  custom_debug.proto  custom_debug.rs  custom_options.proto  custom_options.rs  custom_options_ext.proto  custom_scalar.proto  custom_scalar.rs  debug.rs  decode_error.rs  default_enum_value.proto  default_enum_value.rs  default_string_escape.proto  default_string_escape.rs  default_trait.proto  default_trait.rs  deprecated_field.proto  deprecated_field.rs  derive_const.rs  derive_copy.proto  derive_copy.rs  derive_eq.proto  derive_eq.rs  derive_heapless.rs  disable_comments.proto  disable_comments.rs  encoded_len.proto  encoded_len.rs  (+79 more)
tests/src/complex_package_structure/: mod.rs
tests/src/encoded_len/: limit.rs  overflow.rs
tests/src/enum_type/: closed.proto  mod.rs  open.proto  use_in_fields.proto
tests/src/nesting_complex/: nesting_complex.rs
tests/src/no_root_packages/: gizmo.proto  mod.rs  root.proto  widget.proto  widget_factory.proto
(+136 files in other folders)
