[workspace]
members = [
  "benchmarks",
  "conformance",
  "prost",
  "prost-build",
  "prost-derive",
  "prost-types",
  "protobuf",
  "tests",
  "tests-2015",
  "tests-no-std",
  "tests/overflow",
  "tests/single-include",
  "fuzz",
]

resolver = "2"

[workspace.package]
version = "0.13.4"
authors = [
  "Dan Burkert <dan@danburkert.com>",
  "Lucio Franco <luciofranco14@gmail.com>",
  "Casper Meijn <casper@meijn.net>",
  "Tokio Contributors <team@tokio.rs>",
]
license = "Apache-2.0"
repository = "https://github.com/tokio-rs/prost"
rust-version = "1.71.1"
edition = "2021"

[profile.bench]
debug = true

[profile.test.package.tests-overflow]
# Optimize tests to not spend stupid amounts of time looping through repetitive
# encoded fields used for length padding.
opt-level = 1
# Code under test is expected to explicitly check for overflows and panic,
# so disable built-in checks.
overflow-checks = false

[profile.test.package.prost]
overflow-checks = false
