[package]
name = "b_tests"
version = "0.1.0"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
prost-build = { path = "../prost-build" }
protobuf_strict = { git = "https://github.com/Jasperav/protobuf_strict.git" }

[dependencies]
uuid = { version = "1", features = ["v4"] }
prost = { path = "../" }
