[package]
name = "benchmarks"
version = "0.0.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
publish = false

[lib]
doctest = false
test = false

[dependencies]
bytes = "0.4.7"
prost = { path = ".." }
prost-derive = { path = "../prost-derive" }

[build-dependencies]
prost-build = { path = "../prost-build" }
protobuf = { path = "../protobuf" }
