[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]

[build-dependencies]
prost-build = { path = "../prost-build" }

[dev-dependencies]
prost = { path = "../prost" }
criterion = { version = "0.7", default-features = false }

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "dataset"
harness = false
