[package]
name = "conformance"
version = "0.0.0"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2018"

[dependencies]
prost.workspace = true
protobuf.workspace = true
tests.workspace = true

bytes.workspace = true
env_logger.workspace = true
