[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"
authors = [
  "Dan Burkert <dan@danburkert.com>",
  "Lucio Franco <luciofranco14@gmail.com>",
  "Casper Meijn <casper@meijn.net>",
  "Tokio Contributors <team@tokio.rs>",
]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tests = { path = "../tests" }
protobuf = { path = "../protobuf" }

[[bin]]
name = "proto3"
path = "fuzzers/proto3.rs"

[[bin]]
name = "proto2"
path = "fuzzers/proto2.rs"
