[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition.workspace = true
authors.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tests = { path = "../tests" }
protobuf = { path = "../protobuf" }
prost-types = { path = "../prost-types" }
chrono = "0.4"

[[bin]]
name = "proto3"
path = "fuzzers/proto3.rs"
test = false
doc = false
bench = false

[[bin]]
name = "proto2"
path = "fuzzers/proto2.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_date"
path = "fuzzers/parse_date.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_duration"
path = "fuzzers/parse_duration.rs"
test = false
doc = false
bench = false
