[package]
name = "prosit-test"
version = "0.1.0"
authors = ["kaiserkarel <k.l.kubat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = { path = ".." }
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
prost-build = { path = "../prost-build" }