[package]
name = "prost-build"
version = "0.12.4"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Lucio Franco <luciofranco14@gmail.com>",
    "Casper Meijn <casper@meijn.net>",
    "Tokio Contributors <team@tokio.rs>",
]
license = "Apache-2.0"
repository = "https://github.com/tokio-rs/prost"
documentation = "https://docs.rs/prost-build"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."
edition = "2021"
rust-version = "1.70"

[features]
default = ["format"]
format = ["dep:prettyplease", "dep:syn"]
cleanup-markdown = ["dep:pulldown-cmark", "dep:pulldown-cmark-to-cmark"]

[dependencies]
bytes = { workspace = true }
heck = { workspace = true }
itertools = { workspace = true, features = ["use_alloc"] }
log = { workspace = true }
multimap = { workspace = true }
petgraph = { workspace = true }
prost = { version = "0.12.4", path = "../prost", default-features = false }
prost-types = { version = "0.12.4", path = "../prost-types", default-features = false }
tempfile = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true, features = ["std", "unicode-bool"] }

prettyplease = { workspace = true, optional = true }
syn = { workspace = true, features = ["full"], optional = true }

# These two must be kept in sync, used for `cleanup-markdown` feature.
pulldown-cmark = { workspace = true, optional = true }
pulldown-cmark-to-cmark = { workspace = true, optional = true }

[dev-dependencies]
env_logger = { workspace = true }
