[package]
name = "prost-codegen"
version = "0.1.1"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"
repository = "https://github.com/danburkert/prost"
documentation = "https://docs.rs/prost-codegen"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."

[dependencies]
bytes = "0.4"
env_logger = "0.4"
itertools = "0.6"
log = "0.3"
multimap = "0.3"
petgraph = "0.4"
prost = { path = ".." }
prost-derive = { path = "../prost-derive" }
