[package]
name = "prost-derive"
version = "0.12.4"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Lucio Franco <luciofranco14@gmail.com>",
    "Casper Meijn <casper@meijn.net>",
    "Tokio Contributors <team@tokio.rs>",
]
license = "Apache-2.0"
repository = "https://github.com/tokio-rs/prost"
documentation = "https://docs.rs/prost-derive"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."
edition = "2021"
rust-version = "1.70"

[lib]
proc_macro = true

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true, features = ["use_alloc"] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits"] }
