[package]
name = "prost-derive"
version = "0.12.6"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Generate encoding and decoding implementations for Prost annotated types."
edition.workspace = true
rust-version.workspace = true

[lib]
proc_macro = true

[dependencies]
anyhow = "1.0.1"
itertools = ">=0.10.1, <=0.12"
proc-macro2 = "1.0.60"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
