[package]
name = "prost-derive"
version = "0.12.5"
authors = [
  "Dan Burkert <dan@danburkert.com>",
  "Lucio Franco <luciofranco14@gmail.com>",
  "Casper Meijn <casper@meijn.net>",
  "Tokio Contributors <team@tokio.rs>",
]
license = "Apache-2.0"
repository = "https://github.com/tokio-rs/prost"
documentation = "https://docs.rs/prost-derive"
readme = "README.md"
description = "Generate encoding and decoding implementations for Prost annotated types."
edition = "2021"
rust-version = "1.70"

[lib]
proc_macro = true

[dependencies]
anyhow = "1.0.1"
itertools = ">=0.10.1, <=0.12"
proc-macro2 = ">=1.0.60, <2"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
