[package]
name = "prost-serde"
version = "0.1.0"
authors = ["Alexander Jones <alexanderj2357@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
protobuf = "2.8.0"
prost-types = { path = "prost-types" }