[package]
name = "proto-conformance"
version = "0.1.0"
authors = ["Dan Burkert <dan@danburkert.com>"]

[dependencies]
bytes = "0.4"
proto = { path = ".." }
proto-derive = { path = "../proto-derive" }

[build-dependencies]
proto-build = { path = "../proto-build" }
proto-codegen = { path = "../proto-codegen" }
