[package]
name = "protobuf"
version = "0.0.0"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2018"

[dependencies]
prost = { path = "../prost" }
prost-types = { path = "../prost-types" }

[build-dependencies]
anyhow = "1.0.1"
prost-build = { path = "../prost-build" }
tempfile = "3"

# With libz-sys `1.1.8` the msrv has been bumped to 1.54. Since, this dep
# is not a dep of the actual prost crates we will force cargo to not include
# the new version.
#
# https://github.com/rust-lang/libz-sys/issues/101
libz-sys = { version = "1.1, < 1.1.7", optional = true }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "dataset"
harness = false

[package.metadata.cargo-machete]
ignored = ["prost-types"]
