[package]
name = "protobuf"
version = "0.0.0"
authors = [
  "Dan Burkert <dan@danburkert.com>",
  "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2021"

[dependencies]
prost = { path = "../prost" }
prost-types = { path = "../prost-types" }

[build-dependencies]
anyhow = "1.0.1"
prost-build = { path = "../prost-build" }
tempfile = "3"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "dataset"
harness = false

[package.metadata.cargo-machete]
ignored = ["prost-types"]
