[package]
name = "protobuf"
version = "0.0.0"
publish = false
edition.workspace = true
authors.workspace = true

[dependencies]
prost = { path = "../prost" }
prost-types = { path = "../prost-types" }

[build-dependencies]
anyhow = "1.0.1"
prost-build = { path = "../prost-build" }
tempfile = "3"
cmake = "0.1.51"

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"]
