[package]
name = "test-all-types"
version = "0.1.1"
authors = ["Dan Burkert <dan@danburkert.com>"]
publish = false

[lib]
doctest = false

[dependencies]
bytes = "0.4"
prost = { path = ".." }
prost-derive = { path = "../prost-derive" }

[build-dependencies]
prost-build = { path = "../prost-build" }
prost-codegen = { path = "../prost-codegen" }
