[package]
name = "tests-2015"
version = "0.0.0"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2015"

build = "../tests/src/build.rs"

[lib]
doctest = false
path = "../tests/src/lib.rs"

[features]
default = ["edition-2015", "std"]
edition-2015 = []
std = ["anyhow/std", "prost-types/std", "prost/std"]

[dependencies]
prost.workspace = true
prost-types.workspace = true
protobuf.workspace = true

anyhow.workspace = true
bytes.workspace = true
cfg-if.workspace = true

[dev-dependencies]
prost-build.workspace = true

diff.workspace = true
tempfile.workspace = true

[build-dependencies]
prost-build.workspace = true
protobuf.workspace = true

cfg-if.workspace = true
env_logger.workspace = true
