[package]
name = "tests-2015"
version = "0.0.0"
publish = false
edition = "2015"
authors.workspace = true

build = "../tests/src/build.rs"

[lib]
name = "tests"
doctest = false
path = "../tests/src/lib.rs"

[features]
default = ["edition-2015", "std"]
edition-2015 = []
std = []

[dependencies]
anyhow = "1.0.1"
cfg-if = "1"
prost = { path = "../prost" }
prost-types = { path = "../prost-types" }
protobuf = { path = "../protobuf" }

[dev-dependencies]
prost-build = { path = "../prost-build" }
tempfile = "3"

[build-dependencies]
cfg-if = "1"
env_logger = { version = "0.11", default-features = false }
prost-build = { path = "../prost-build" }
