[package]
name = "tests-2018"
version = "0.0.0"
authors = [
  "Dan Burkert <dan@danburkert.com>",
  "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2018"

build = "../tests/src/build.rs"

[lib]
doctest = false
path = "../tests/src/lib.rs"

[features]
default = ["std"]
std = []
# This crate shares code with `tests-2015` crate. Define this feature, but 
# never enable it for this crate.
edition-2015 = []

[dependencies]
anyhow = "1.0.1"
bytes = "1"
cfg-if = "1"
prost = { path = "../prost" }
prost-types = { path = "../prost-types" }
protobuf = { path = "../protobuf" }

[dev-dependencies]
diff = "0.1"
prost-build = { path = "../prost-build", features = ["cleanup-markdown"] }
tempfile = "3"

[build-dependencies]
cfg-if = "1"
env_logger = { version = "0.10", default-features = false }
prost-build = { path = "../prost-build" }
protobuf = { path = "../protobuf" }
