[package]
name = "tests-2024"
version = "0.0.0"
publish = false
edition = "2024"
authors.workspace = true

build = "../tests/build.rs"

[lib]
doctest = false
path = "../tests/src/lib.rs"

[features]
default = ["std"]
std = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("edition-2015"))'] }

[dependencies]
anyhow = "1.0.1"
cfg-if = "1"
prost = { path = "../prost" }
prost-types = { path = "../prost-types" }

[dev-dependencies]
prost-build = { path = "../prost-build" }
tempfile = "3"
protobuf = { path = "../protobuf" }

[build-dependencies]
cfg-if = "1"
env_logger = { version = "0.11", default-features = false }
prost-build = { path = "../prost-build" }
