[package]
name = "tests-alloc"
version = "0.0.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
publish = false
edition = "2018"

build = "../tests/src/build.rs"

[lib]
doctest = false
path = "../tests/src/lib.rs"

[features]
default = ["nostd-collections"]
nostd-collections = []

[dependencies]
bytes = { version = "0.5", default-features = false }
cfg-if = "0.1"
prost = { path = ".." }
prost-types = { path = "../prost-types" }
protobuf = { path = "../protobuf" }

[dev-dependencies]
diff = "0.1"
prost-build = { path = "../prost-build" }
tempfile = "3"

[build-dependencies]
cfg-if = "0.1"
env_logger = { version = "0.6", default-features = false }
prost-build = { path = "../prost-build" }
protobuf = { path = "../protobuf" }
