[package]
name = "tests-alloc"
version = "0.0.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
publish = false
edition = "2018"

build = "src/build.rs"

# The standard libtest relies on std, so if we want to test no_std builds,
# we should make a binary and not use #[test]
[[bin]]
name = "tests-alloc"
path = "src/bin.rs"

[dependencies]
#TODO bytes = { version = "0.5", default-features = false }
# Not using patch because it makes it harder for downstream projects
bytes = { git = "https://github.com/tokio-rs/bytes", rev = "c17e40115f5bb2a2db71ed90dceae6ec643dc024", default-features = false }
cfg-if = "0.1"
prost = { path = "..", default-features = false }
prost-derive = { path = "../prost-derive", default-features = false }
prost-types = { path = "../prost-types", default-features = false }
protobuf = { path = "../protobuf" }
tests-infra = { path = "../tests-infra" }

[dev-dependencies]
diff = "0.1"
prost-build = { path = "../prost-build" }
tempfile = "3"

[build-dependencies]
cfg-if = "0.1"
env_logger = { version = "0.6", default-features = false }
prost-build = { path = "../prost-build" }
protobuf = { path = "../protobuf" }
