[package]
name = "tests-infra"
version = "0.0.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
publish = false
edition = "2018"

[lib]
doctest = false

[dependencies]
#TODO bytes = { version = "0.5", default-features = false }
# Not using patch because it makes it harder for downstream projects
bytes = { git = "https://github.com/tokio-rs/bytes", rev = "c17e40115f5bb2a2db71ed90dceae6ec643dc024", default-features = false }
cfg-if = "0.1"
prost = { path = "..", default-features = false }
