[package]
name = "tests-no-std"
version = "0.0.0"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2018"

build = "../tests/src/build.rs"

[lib]
doctest = false
path = "../tests/src/lib.rs"

# Compile the `tests` crate *without* the std feature, which is implicitly
# omitted from the default crate features. It would be easier to do something
# like `cargo test -p tests --no-default-features`, but that currently does not
# do the right thing (see [1] for more context).
# [1]: https://github.com/rust-lang/cargo/pull/8074

[dependencies]
prost = { workspace = true, features = ["derive"] }
prost-types = { workspace = true, features = [] }
protobuf = { workspace = true }

anyhow.workspace = true
bytes.workspace = true
cfg-if.workspace = true

[dev-dependencies]
prost-build.workspace = true

diff.workspace = true
tempfile.workspace = true

[build-dependencies]
prost-build.workspace = true
protobuf.workspace = true

cfg-if.workspace = true
env_logger.workspace = true
