[package]
name = "tests"
version = "0.0.0"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2018"

build = "src/build.rs"

[features]
default = ["std"]
std = ["anyhow/std", "prost-types/std"]

[dependencies]
prost.workspace = true
prost-types.workspace = true
protobuf.workspace = true

anyhow.workspace = true
# bytes = "1"
cfg-if.workspace = true

[dev-dependencies]
prost-build = { workspace = true, features = ["cleanup-markdown"] }

diff.workspace = true
tempfile.workspace = true

[build-dependencies]
prost-build.workspace = true
protobuf.workspace = true

cfg-if.workspace = true
env_logger.workspace = true
