[package]
name = "tests"
version = "0.0.0"
authors = [
  "Dan Burkert <dan@danburkert.com>",
  "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2021"

build = "src/build.rs"

[features]
default = ["std"]
std = []

[dependencies]
anyhow = "1.0.1"
cfg-if = "1"
prost = { path = "../prost" }
prost-types = { path = "../prost-types" }

[dev-dependencies]
prost-build = { path = "../prost-build", features = ["cleanup-markdown"] }
tempfile = "3"
protobuf = { path = "../protobuf" }

[build-dependencies]
cfg-if = "1"
env_logger = { version = "0.10", default-features = false }
prost-build = { path = "../prost-build" }
