[package]
name = "tests"
version = "0.0.0"
publish = false
edition.workspace = true
authors.workspace = true

[features]
default = ["std", "json"]
std = []
json = ["prost/serde-json"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("edition-2015"))'] }

[dependencies]
anyhow = "1.0.1"
cfg-if = "1"
prost = { path = "../prost", features = ["serde"] }
prost-types = { path = "../prost-types", features = ["serde"] }

[dev-dependencies]
prost-build = { path = "../prost-build", features = ["cleanup-markdown"] }
tempfile = "3"
protobuf = { path = "../protobuf" }

[build-dependencies]
cfg-if = "1"
env_logger = { version = "0.11", default-features = false }
prost-build = { path = "../prost-build" }
